--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-20  Theodore A. Roth  <troth@openavr.org>
+
+	* avr-tdep.c (avr_read_pc): Use regcache instead of read_register.
+	(avr_read_sp): Ditto.
+
 2003-06-20  Daniel Jacobowitz  <drow@mvista.com>
 
 	* config/arm/linux.mt: Remove code protected by GDBSERVER define.
