2003-06-17  Doug Evans  <dje@sebabeach.org>
	* cgen-trace.h (sim_disasm_read_memory): Update args to be compatible
	with disassemble_info:read_memory_func.
	* cgen-trace.c (sim_disasm_read_memory): Ditto.

--- a/sim/common/ChangeLog
+++ b/sim/common/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-17  Doug Evans  <dje@sebabeach.org>
+
+	* cgen-trace.h (sim_disasm_read_memory): Update args to be compatible
+	with disassemble_info:read_memory_func.
+	* cgen-trace.c (sim_disasm_read_memory): Ditto.
+
 2003-06-04  Michael Snyder  <msnyder@redhat.com>
 
 	* common/run.c (main): Remove SIM_H8300 ifdef.
