--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,16 @@
+2003-06-21  Andrew Cagney  <cagney@redhat.com>
+
+	* frame.c (get_frame_register): New function.
+	(frame_unwind_register_signed): New function.
+	(get_frame_register_signed): New function.
+	(frame_unwind_register_unsigned): New function.
+	(get_frame_register_unsigned): New function.
+	* frame.h: Add comments on naming schema.
+	(get_frame_register, frame_unwind_register_signed): Declare.
+	(get_frame_register_signed, get_frame_register_signed): Declare.
+	(frame_unwind_register_unsigned): Declare.
+	(get_frame_register_unsigned): Declare.
+
 2003-06-20  Theodore A. Roth  <troth@openavr.org>
 
 	* avr-tdep.c (avr_gdbarch_init): Don't call set_gdbarch_bfd_vma_bit.
