--- a/gdb/doc/gdb.texinfo
+++ b/gdb/doc/gdb.texinfo
@@ -156,6 +156,7 @@ Copyright (C) 1988-2003 Free Software Foundation, Inc.
 * Installing GDB::              Installing GDB
 * Maintenance Commands::        Maintenance Commands
 * Remote Protocol::             GDB Remote Serial Protocol
+* Agent Expressions::           The GDB Agent Expression Mechanism
 * Copying::			GNU General Public License says
                                 how you can copy and share GDB
 * GNU Free Documentation License::  The license for this documentation
@@ -21719,6 +21720,8 @@ host is called:
 -> @code{X1234,6:XXXXXX}
 <- @code{T02}
 @end smallexample
+
+@include agentexpr.texi
 
 @include gpl.texi
 
