--- a/sim/common/ChangeLog
+++ b/sim/common/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-22  Andrew Cagney  <cagney@redhat.com>
+
+	From matthew green <mrg@redhat.com>:
+        * sim-fpu.h: Update copyright.
+	(sim_fpu_fraction, sim_fpu_guard): New prototypes.
+        * sim-fpu.c: Update copyright.
+	(sim_fpu_fraction, sim_fpu_guard): New inline functions.
+
 2003-06-17  Frank Ch. Eigler  <fche@redhat.com>
 
 	From Doug Evans <dje@sebabeach.org>:
