* tui-hooks.c: Update include order. 	* tui.c: Likewise. 	* tuiCommand.c: Likewise. 	* tuiData.c: Likewise. 	* tuiDataWin.c: Likewise. 	* tuiDisassem.c: Likewise. 	* tuiGeneralWin.c: Likewise. 	* tuiIO.c: Likewise. 	* tuiLayout.c: Likewise. 	* tuiRegs.c: Likewise. 	* tuiSource.c: Likewise. 	* tuiSourceWin.c: Likewise. 	* tuiStack.c: Likewise. 	* tuiWin.c: Likewise.

--- a/gdb/tui/ChangeLog
+++ b/gdb/tui/ChangeLog
@@ -1,3 +1,20 @@
+2003-06-22  Daniel Jacobowitz  <drow@mvista.com>
+
+	* tui-hooks.c: Update include order.
+	* tui.c: Likewise.
+	* tuiCommand.c: Likewise.
+	* tuiData.c: Likewise.
+	* tuiDataWin.c: Likewise.
+	* tuiDisassem.c: Likewise.
+	* tuiGeneralWin.c: Likewise.
+	* tuiIO.c: Likewise.
+	* tuiLayout.c: Likewise.
+	* tuiRegs.c: Likewise.
+	* tuiSource.c: Likewise.
+	* tuiSourceWin.c: Likewise.
+	* tuiStack.c: Likewise.
+	* tuiWin.c: Likewise.
+
 2003-06-12  Andreas Schwab  <schwab@suse.de>
 
 	* tuiSource.c (tuiVerticalSourceScroll): Use get_frame_pc.
