--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2003-06-22  Daniel Jacobowitz  <drow@mvista.com>
 
+	* gdb.base/relocate.exp: Test add-symbol-file with a variable
+	offset.
+
+2003-06-22  Daniel Jacobowitz  <drow@mvista.com>
+
 	* gdb.c++/pr-1210.cc: New file.
 	* gdb.c++/pr-1210.exp: New file.
 
