--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-22  Daniel Jacobowitz  <drow@mvista.com>
+
+	* symfile.c (add_symbol_file_command): Use parse_and_eval_address.
+	Suggested by Nick Hibma <n_hibma@webweaving.org>.
+
 2003-06-22  Andrew Cagney  <cagney@redhat.com>
 
 	* osabi.c (generic_elf_osabi_sniff_abi_tag_sections): Handle
