--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-22  Andrew Cagney  <cagney@redhat.com>
+
+	GDB 6.0 branch created.
+
 2003-06-22  Daniel Jacobowitz  <drow@mvista.com>
 
 	* symfile.c (add_symbol_file_command): Use parse_and_eval_address.
