2003-06-22  Andrew Cagney  <cagney@redhat.com>
	GDB 6.0 branch created.
	* README: Update.
	* PROBLEMS: Update.  Empty.
	* NEWS: Update.

Index: doc/ChangeLog
2003-06-22  Andrew Cagney  <cagney@redhat.com>

	* gdb.texinfo (Contributors): Mention 6.0 release engineer.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,6 +1,9 @@
 2003-06-22  Andrew Cagney  <cagney@redhat.com>
 
 	GDB 6.0 branch created.
+	* README: Update.
+	* PROBLEMS: Update.  Empty.
+	* NEWS: Update.
 
 2003-06-22  Daniel Jacobowitz  <drow@mvista.com>
 
