--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -1,7 +1,10 @@
 		What has changed in GDB?
 	     (Organized release by release)
 
-*** Changes since GDB 5.3:
+*** Changes since GDB 6.0:
+
+
+*** Changes in GDB 6.0:
 
 * The meaning of "detach" has changed for gdbserver
 
