--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-24  Joel Brobecker  <brobecker@gnat.com>
+
+	* gdb.base/bang.exp: New testcase.
+
 2003-06-23  Joel Brobecker  <brobecker@gnat.com>
 
 	* gdb.base/langs.exp: Add some tests for the "minimal" language
