--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,32 @@
+2003-06-26  Andrew Cagney  <cagney@redhat.com>
+
+	* gdbarch.sh (FRAME_ARGS_ADDRESS): Add predicate.  Deprecate.
+	(FRAME_LOCALS_ADDRESS): Add predicate.  Deprecate.
+	* gdbarch.h, gdbarch.c: Re-generate.
+	* frame-base.c (default_frame_args_address): Update.  Use
+	default_frame_base_address when DEPRECATED_FRAME_ARGS_ADDRESS is
+	not available.
+	(default_frame_locals_address): Ditto for
+	DEPRECATED_FRAME_LOCALS_ADDRESS.
+	* vax-tdep.c (vax_sigtramp_saved_pc): Update.
+	(vax_frame_num_args): Update.
+	(vax_gdbarch_init): Update.
+	* rs6000-tdep.c (rs6000_gdbarch_init): Update.
+	* ns32k-tdep.c (ns32k_gdbarch_init): Update.
+	* mcore-tdep.c (mcore_gdbarch_init): Update.
+	* m68hc11-tdep.c (m68hc11_gdbarch_init): Update.
+	* ia64-tdep.c (ia64_gdbarch_init): Update.
+	* symtab.h (address_class): Update comments.
+	* ns32k-tdep.c (ns32k_sigtramp_saved_pc): Update.
+	* config/sparc/tm-sparc.h (DEPRECATED_FRAME_ARGS_ADDRESS): Update.
+	(DEPRECATED_FRAME_LOCALS_ADDRESS): Update.
+	* config/pa/tm-hppa64.h (DEPRECATED_FRAME_ARGS_ADDRESS): Update.
+	(DEPRECATED_FRAME_LOCALS_ADDRESS): Update.
+	(DEPRECATED_FRAME_LOCALS_ADDRESS): Update.
+	* config/m68k/tm-delta68.h (DEPRECATED_FRAME_ARGS_ADDRESS): Update.
+	* alpha-mdebug-tdep.c: Update.
+	* ada-lang.c (add_symbols_from_enclosing_procs): Update.
+
 2003-06-26  Andreas Jaeger  <aj@suse.de>
 
 	* x86-64-tdep.c (x86_64_push_arguments): Always set %rax to number
