--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-26  Michael Chastain  <mec@shout.net>
+
+	* config/djgpp/fnchange.lst: Add gdb/testsuite/gdb.c++/pr-1210.cc,
+	gdb/testsuite/gdb.c++/pr-1210.exp.
+
 2003-06-26  Andrew Cagney  <cagney@redhat.com>
 
 	* config/djgpp/fnchange.lst: Fix 8.3 problem with sim/ppc's
