--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-27  Elena Zannoni  <ezannoni@redhat.com>
+
+        * dwarfread.c (decode_modified_type): Gag new compiler warning.
+
 2003-06-26  Elena Zannoni  <ezannoni@redhat.com>
 
 	* dwarf2read.c (dwarf2_locate_sections): Ignore empty .eh_frame
