--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-27  Elena Zannoni  <ezannoni@redhat.com>
+
+	* config/powerpc/ppc64-linux.mh (NATDEPFILES): Add linux-nat.o.
+
 2003-06-27  Andrew Cagney  <cagney@redhat.com>
 
 	* m68hc11-tdep.c (m68hc11_call_dummy_address): Delete function.
