--- a/sim/sh/ChangeLog
+++ b/sim/sh/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-27  Michael Snyder  <msnyder@redhat.com>
+
+	* gencode.c (op tab): Move misplaced semicolon.
+
 2003-02-27  Andrew Cagney  <cagney@redhat.com>
 
 	* interp.c (init_dsp, sim_open, sim_create_inferior): Rename _bfd
