./ 	* cli/cli-logging.c: New file. 	* cli-out.c (struct ui_out_data): Add original_stream. 	(cli_redirect): New function. 	(cli_ui_out_impl): Add cli_redirect. 	(cli_out_new): Initialize original_stream. 	* ui-out.c (default_ui_out_impl): Add NULL for redirect member. 	(uo_redirect, ui_out_redirect): New. 	* ui-out.h (struct ui_out_impl): Add redirect member. 	(redirect_ftype): New. 	(ui_out_redirect): Add prototype. 	* Makefile.in: Add rules for cli-logging.c. 	* NEWS: Mention "set logging". mi/ 	* mi-out.c (mi_ui_out_impl): Add NULL for redirect member. tui/ 	* tui-out.c (tui_ui_out_impl): Add NULL for redirect member. doc/ 	* gdb.texinfo (Logging output): New chapter.

--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -3,6 +3,10 @@
 
 *** Changes since GDB 6.0:
 
+* GDB supports logging output to a file
+
+There are two new commands, "set logging" and "show logging", which can be
+used to capture GDB's output to a file.
 
 *** Changes in GDB 6.0:
 
