--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-22  Michael Chastain  <mec@shout.net>
+	    Daniel Jacobowitz  <drow@mvista.com>
+
+	* gdb.base/selftest.exp (do_steps_and_nexts): Increase maximum
+	initial line count of 'captured_main' from 26 to 32.
+	(test_with_self): Allow xmalloc call to be interleaved with the
+	preceding two lines.
+
 2003-06-24  Joel Brobecker  <brobecker@gnat.com>
 
 	* gdb.base/bang.exp: New testcase.
