--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-29  Andrew Cagney  <cagney@redhat.com>
+
+	* frame.c (frame_register_unwind): Use unsigned char when dumping
+	the buffer contents.
+
 2003-06-28  Daniel Jacobowitz  <drow@mvista.com>
 
 	* cli/cli-logging.c: New file.
