--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-30  Joel Brobecker  <brobecker@gnat.com>
+
+	* sparc-tdep.c (stop_after_trap): Remove declaration, not used.
+
 2003-06-30  David Carlton  <carlton@kealia.com>
 
 	Band-aid for PR c++/1245.
