* x86-64-tdep.c (x86_64_push_arguments): Align stack to 16-byte 	before the call. 	Set %rax only to number of SSE registers used.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-01  Andreas Jaeger  <aj@suse.de>
+
+	* x86-64-tdep.c (x86_64_push_arguments): Align stack to 16-byte
+	before the call.
+	Set %rax only to number of SSE registers used.
+
 2003-07-01  Andrew Cagney  <cagney@redhat.com>
 
 	* trad-frame.h: Update comments, a -1 .addr is reserved.
@@ -14,7 +20,7 @@
 	(trad_frame_set_value): Rename trad_frame_register_value.
 	* d10v-tdep.c (d10v_frame_unwind_cache): Use trad_frame_addr_p
 	and trad_frame_set_value.
-	
+
 2003-06-30  Jim Blandy  <jimb@redhat.com>
 
 	Patch from IBM (authors unspecified, probably Ulrich Weigand and
