--- a/sim/h8300/ChangeLog
+++ b/sim/h8300/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-24  Michael Snyder  <msnyder@redhat.com>
+
+	* sim-main.h (SIM_WIFSTOPPED, SIM_WSTOPSIG): Define.
+	* compile.c (sim_resume): Use the above to return stop signal.
+
 2003-06-18  Michael Snyder  <msnyder@redhat.com>
 
 	* compile.c: Replace "Hitachi" with "Renesas".
