--- a/sim/sh/ChangeLog
+++ b/sim/sh/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-03  Michael Snyder  <msnyder@redhat.com>
+
+	* gencode.c (movs): Fix a couple of text transpositions.
+
 2003-06-27  Michael Snyder  <msnyder@redhat.com>
 
 	* gencode.c (op movsxy_tab): Fix up some copy/paste errors
