--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-03  Joel Brobecker  <brobecker@gnat.com>
+
+	* remote-vx.c (vx_add_symbols): Fix compilation error.
+
 2003-07-03  Andrew Cagney  <cagney@redhat.com>
 
 	* gdbarch.sh (REGISTER_NAME): Do not supply a default.
