--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-04  Joel Brobecker  <brobecker@gnat.com>
+
+	* rs6000-nat.c (vmap_symtab): Fix compilation error.
+
 2003-07-04  Kris Warkentin  <kewarken@qnx.com>
 
 	* config/i386/nto.mh: Set XM_FILE to xm-i386.h
